--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,7 +22,7 @@ jobs:
   compile:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+#      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
