--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Copy
         run: |
-          cp -a /build/html5/  /docs/
+          cp -r build/html5/  docs/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
