--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -27,15 +27,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Copy
-        run: |
-          cp -r build/html5/  docs/
+      #- name: Copy
+      #  run: |
+      #    cp -r build/html5/  docs/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: 'docs'
+          path: 'build/html5/'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2 
